hphp/test/slow/parser/tuple_as_const.php.expectf
Fatal error: Invalid expression in constant initializer in %s/tuple_as_const.php on line 9
